--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\Modern.cs" />
      <Compile Include="Assets\Scripts\Phone.cs" />
      <Compile Include="Assets\Scripts\Shambler.cs" />
+     <Compile Include="Assets\Scripts\Survivor.cs" />
      <Compile Include="Assets\Scripts\Zombie.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.3/UnityEngine.UI.dll</HintPath>
