--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\Shambler.cs" />
      <Compile Include="Assets\Scripts\Survivor.cs" />
      <Compile Include="Assets\Scripts\Zombie.cs" />
+     <Compile Include="Assets\Scripts\avoid.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.3/UnityEngine.UI.dll</HintPath>
  </Reference>
